--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
-*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+
+
 .header-top{
   background-color: #b3b4b4;
 margin: 0;
@@ -135,6 +132,7 @@ background-color: #f5f1f1;
 ul{
   list-style: none;
 }
+/* 
 .signup-send-otp{
   width: 100%;
     height: 70vh;
@@ -154,10 +152,15 @@ ul{
     box-shadow: 2px 5px 5px lightgray;
 }
 .signup-send-otp>.inner>form{
-    width: 300px;
+    width: 350px;
     display: flex;
     flex-direction: column;
     gap: 15px;
+}
+.signup-send-otp>.inner>div>form{
+    width: 300px;
+    display: flex;
+    gap: 10px;
 }
 .signup-send-otp>.inner>form >input{
   border: none;
@@ -175,3 +178,12 @@ ul{
     background-color: #873600;
   }
 }
+.signup-send-otp>.inner>form >div>span>button[type="button"] {
+  background: none; 
+  border: none;
+  color: blue;
+  cursor: pointer;
+  &:hover{
+    text-decoration: underline;
+  }
+} */
